WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
310529
Unreviewed attempt to fix visionOS build
https://bugs.webkit.org/show_bug.cgi?id=310529
Summary
Unreviewed attempt to fix visionOS build
Chris Dumez
Reported
2026-03-23 02:34:53 PDT
Unreviewed attempt to fix visionOS build on EWS.
Attachments
Add attachment
proposed patch, testcase, etc.
Chris Dumez
Comment 1
2026-03-23 02:36:01 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/61160
EWS
Comment 2
2026-03-23 05:08:49 PDT
Committed
309753@main
(5dd63cfaf980): <
https://commits.webkit.org/309753@main
> Reviewed commits have been landed. Closing PR #61160 and removing active labels.
Radar WebKit Bug Importer
Comment 3
2026-03-23 05:09:17 PDT
<
rdar://problem/173144443
>
Anne van Kesteren
Comment 4
2026-03-23 10:05:42 PDT
***
Bug 310546
has been marked as a duplicate of this bug. ***
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug