Unreviewed attempt to fix visionOS build https://bugs.webkit.org/show_bug.cgi?id=310529

* Source/WebKit/UIProcess/ios/UIKitUtilities.mm:
* Source/WebKit/UIProcess/ios/WKExtrinsicButton.mm:

Canonical link: https://commits.webkit.org/309753@main